--- a/index.html
+++ b/index.html
@@ -2,27 +2,33 @@
 <html>
 <head lang="sk">
 	<meta charset="UTF-8" />
-	<title>title</title>
+	<title>Bohdan Solonenko</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 	<h1 class="title">NAJPOPULÁRNEJŠIE NÁSTROJE INTERNETOVÉHO MARKETINGU</h1>
     <p>Internetový marketing je marketing tovaru alebo služieb pomocou digitálnych (internetových) technológií, väčšinou na internete, ale aj prostredníctvom smartfónov, zobrazovacej reklamy a akýchkoľvek iných digitálnych médií. Rozvoj online marketingu od 90. rokov 20. storočia a v roku 2000 zmenil spôsob, akým značky a spoločnosti využívajú technológie na marketing. Keďže digitálne platformy sa čoraz viac začleňujú do marketingových plánov a každodenného života a ľudia namiesto fyzických obchodov používajú digitálne zariadenia, digitálne marketingové kampane sú čoraz bežnejšie a účinnejšie.pozrime sa na najpopulárnejšie marketingové nástroje </p>
     <ul>
-        <li>
+        <li class="list-item smm">
            <h2>SMM - Social Media Marketing </h2>
            <p>Tento nástroj by mal byť zaradený na prvé miesto medzi spôsobmi internetového marketingu. V sociálnych sieťach je ľahké nájsť ľudí podľa ich záujmov, koníčkov, veku, vytvoriť komunitu a informovať návštevníkov o rôznych novinkách. Reklama umiestnená na týchto zdrojoch je zvyčajne nenápadná a zameraná na cieľovú skupinu, ktorá sa vyberá podľa mnohých parametrov. Sociálne siete sú prispôsobené pre mobilné telefóny, takže je veľmi jednoduché zbierať z nich návštevnosť.</p>
            <p class="link">Viac informácií si môžete prečítať na tejto stránke :<a href="https://www.vivantina.com/marketingovy-slovnik/social-media-marketing/">https://www.vivantina.com/marketingovy-slovnik/social-media-marketing/</a></p>
+           <img src="./images/photo_2023-01-03_21-58-57.jpg" alt="picture-1" width="100%">
+           <p class="link-picture">Zdroj:<a href="https://recurpost.com/blog/introduction-to-video-marketing-and-how-its-taking-over-social-media/">https://recurpost.com/blog/introduction-to-video-marketing-and-how-its-taking-over-social-media/</a></p>
         </li>
-        <li>
+        <li class="list-item">
            <h2>Optimalizácia SEO</h2>
            <p>Pomáha zvyšovať predaj, popularizovať značku a zvyšovať príjmy. Po prvé, vaša stránka je vysoko hodnotená vyhľadávačmi a po vykonaní propagácie vám bude prinášať výhody po dlhú dobu. Publikum začne lepšie dôverovať internetovému zdroju, ktorý sa zobrazuje na prvých stránkach výsledkov vyhľadávania, zvýši sa počet zákazníkov a vďaka kompetentnému obsahu stránky budete vždy na vrchole výsledkov.</p>
            <p class="link">Príklad optimalizácie seo si môžete pozrieť na tomto odkaze :<a href="https://www.seolight.sk/?gclid=Cj0KCQiA4uCcBhDdARIsAH5jyUnYyax5xL83CI1hkHdTMvlY1H-ujgXOTvLW2PvGU1QaHUoEzSBRvAMaAuf7EALw_wcB">https://www.seolight.sk/?gclid=Cj0KCQiA4uCcBhDdARIsAH5jyUnYyax5xL83CI1hkHdTMvlY1H-ujgXOTvLW2PvGU1QaHUoEzSBRvAMaAuf7EALw_wcB</a></p>
+           <img src="./images/photo_2023-01-03_21-59-17.jpg" alt="picture-2">
+           <p class="link-picture">Zdroj:<a href="https://codedesign.org/why-it-crucial-you-focus-seo">https://codedesign.org/why-it-crucial-you-focus-seo</a></p>
         </li>
-        <li>
+        <li class="list-item">
            <h2>Video marketing</h2>
            <p>Účinnosť tohto nástroja preukázal čas. Teraz môže ktokoľvek vytvoriť videoklip a potom ho šíriť e-mailom alebo zverejniť na videhostingu Youtube. Malé videá môžete nahrať na Instagram. Obzvlášť efektívne je propagovať internetový obchod pomocou videa, pretože video lepšie pomáha pochopiť vlastnosti konkrétneho produktu, postupnosť realizácie objednávky atď. Okrem toho je vizuálny obsah vždy ľahšie vnímateľný ako veľký textový blok.</p>
            <p class="link">Rôzne videá, ktoré si môžete pozrieť na tejto webovej stránke :<a href="https://www.youtube.com/">https://www.youtube.com/</a></p>
+           <img src="./images/photo_2023-01-03_21-59-41.jpg" alt="picture-3">
+           <p class="link-picture">Zdroj:<a href="https://recurpost.com/blog/introduction-to-video-marketing-and-how-its-taking-over-social-media/">https://recurpost.com/blog/introduction-to-video-marketing-and-how-its-taking-over-social-media/</a></p>
         </li>
     </ul>
     <footer>
